# romea-core-rtls-transceiver

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_rtls_transceiver.repos  romea_rtls_transceiver_public.repos
cmake/: romea_core_rtls_transceiverConfig.cmake.in
include/romea_core_rtls_transceiver/: RTLSRangeNoise.hpp  RTLSRangeRandomNoise.hpp  RTLSTransceiverEUID.hpp  RTLSTransceiverFunction.hpp  RTLSTransceiverPhy.hpp  RTLSTransceiverRangingResult.hpp  RTLSTransceiverRangingStatus.hpp
src/: RTLSRangeNoise.cpp  RTLSRangeRandomNoise.cpp  RTLSTransceiverEUID.cpp  RTLSTransceiverFunction.cpp  RTLSTransceiverPhy.cpp  RTLSTransceiverRangingResult.cpp  RTLSTransceiverRangingStatus.cpp
test/: CMakeLists.txt  test_transceiver_ranging_euid.cpp  test_transceiver_ranging_result.cpp  test_transceiver_ranging_status.cpp
